syntax = "proto3";

option csharp_namespace = "gRPC_Service_Example";
import "google/protobuf/empty.proto";    

package user;

service User {
	rpc Create (UserData) returns (UserResponse);
	rpc Read (google.protobuf.Empty) returns (UsersList);
	rpc Update (UserData) returns (UserData);
	rpc Delete (UserData) returns (UserResponse);
}

message UserData {
	int32 id = 1;
	int32 age = 2;
	string name = 3;
	string surname = 4;
	string full_name = 5;
}

message UsersList {
	repeated UserData users_list = 1;
}

message UserResponse {
	int32 id = 1;
}